--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,79 @@
     transform: rotate(360deg);
   }
 }
+.btn {
+  background-color: #212f3c;
+  color: rgb(241, 236, 236);
+  border: 2px solid #f0f3f4;
+}
+
+.btn:hover {
+  background-color: #e6d5d5;
+  color: rgb(77, 66, 66);
+}
+
+.Image {
+  margin: 1%;
+  padding: 1%;
+  width: 400px;
+}
+.det {
+  margin: 1%;
+  padding: 1%;
+}
+h2 {
+  font-size: 25px;
+  text-align: left;
+}
+th {
+  background-color: #282c34;
+  text-align: center;
+  color: whitesmoke;
+}
+.Name {
+  border: 2px solid #dce1ec;
+  display: flex;
+  flex-direction: row;
+  font-size: 15px;
+  margin: 1%;
+  padding: 1%;
+}
+@media only screen and (min-width: 325px) and (max-width: 490px) {
+  .btn {
+    background-color: #212f3c;
+    color: rgb(241, 236, 236);
+    border: 2px solid #f0f3f4;
+  }
+
+  .btn:hover {
+    background-color: #e6d5d5;
+    color: rgb(77, 66, 66);
+  }
+
+  .Image {
+    margin: 1%;
+    padding: 1%;
+    width: 335px;
+    height: 300px;
+  }
+  .det {
+    margin: 1%;
+    padding: 1%;
+  }
+  h2 {
+    text-align: left;
+  }
+  th {
+    background-color: #282c34;
+    text-align: center;
+    color: whitesmoke;
+  }
+  .Name {
+    border: 2px solid #dce1ec;
+    display: flex;
+    flex-direction: column;
+    font-size: 15px;
+    margin: 1%;
+    padding: 1%;
+  }
+}
